fixed navigation stretch goal

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,7 @@
 // Home Content
 
 .home {
+  margin-top: 10rem;
   .intro {
     h2 {
       padding: 15px;
