--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,11 @@ header#top {
   padding: 1rem 0;
   text-align: center;
   background: @porcelain;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.9;
   h1 {
     font-size: 4rem;
     padding: 1rem;
